<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.SignInActivity">

    <!-- <TextView
         android:id="@+id/icon"
         android:layout_width="300dp"
         android:layout_height="153dp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center"
         android:hint="@string/app_name"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="32dp"
         android:visibility="visible" />

 -->
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/config"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/field_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />


        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>


</RelativeLayout>
