...
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis conva
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
...
