<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_add_location_white_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="All" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_gallery"
            android:title="New" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="Logs" />
        <!--<item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:time="Tools" />-->
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="About" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="Logout" />
        </menu>
    </item>

</menu>
